--- a/CerinfoNur/Views/Login/Index.cshtml
+++ b/CerinfoNur/Views/Login/Index.cshtml
@@ -7,14 +7,14 @@
     <div class="container">
         <div class="row">      
             <div class="col-md-8 col-lg-9">
-                <form action="#/" class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                <form action="/Login/Auth" class="form-contact contact_form" method="post" id="contactForm" novalidate="novalidate">
                     <div class="row">
                         <div class="col-lg-5">
                             <div class="form-group">
-                                <input class="form-control" name="name" id="name" type="text" placeholder="Username">
+                                <input class="form-control" name="username" id="name" type="text" placeholder="Username">
                             </div>
                             <div class="form-group">
-                                <input class="form-control" name="email" id="email" type="password" placeholder="Password">
+                                <input class="form-control" name="password" id="email" type="password" placeholder="Password">
                             </div>
                         </div>
                         <div class="form-group text-center text-md-right mt-3">
