--- a/CerinfoNur/Views/Shared/_Layout.cshtml
+++ b/CerinfoNur/Views/Shared/_Layout.cshtml
@@ -55,8 +55,8 @@
 
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav justify-content-end">
-                            <li class="nav-item active"><a class="nav-link" href="Index">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="Login">Login</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/Login">Login</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Services</a>
                             <li class="nav-item submenu dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
