--- a/CerinfoNur/Views/Login/Index.cshtml
+++ b/CerinfoNur/Views/Login/Index.cshtml
@@ -18,7 +18,8 @@
                             </div>
                         </div>
                         <div class="form-group text-center text-md-right mt-3">
-                            <button type="submit" class="button button-contactForm">Login</button>
+                            <button type="submit" class="button button-contactForm">Login</button><br />
+                            @Html.ActionLink("Recuperar ID", "Step1_email", "Login")<br />
                         </div>
                     </div>
                 </form>
